<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#4990E2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginBottom="5dp"
    >

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foodName"
            android:textColor="#E7EFF6"
            android:layout_margin="5dp"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foodType"
            android:textColor="#E7EFF6"
            android:layout_margin="5dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/brandName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brandName"
            android:textColor="#E7EFF6"
            android:layout_margin="5dp"
            android:textSize="16sp" />

    <TextView
        android:id="@+id/foodUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foodUrl"
        android:textColor="#E7EFF6"
        android:layout_margin="5dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/foodDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foodDescription"
        android:textColor="#E7EFF6"
        android:layout_margin="5dp"
        android:textSize="16sp" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="#E7EFF6" />

    </LinearLayout>